syntax = "proto3"; // Defines what syntax to use.
option java_multiple_files = true; // Defines the Java code to be generated in individual files. By default, the compiler generates all Java code in a single file.
package com.alican.grpcHelloWorld.proto_gen.hello; // Defines where to generate the classes.

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service HelloService {
  rpc ExecuteHello(HelloRequest) returns (HelloResponse) {};
  // A Bidirectional streaming RPC.
  //
  // Accepts a stream of RouteNotes sent while a route is being traversed,
  // while receiving other RouteNotes (e.g. from other users).
  rpc ExecuteHelloStream(stream HelloRequest) returns (stream HelloResponse) {};
  rpc ExecuteHelloEmpty(google.protobuf.Empty) returns (HelloResponse) {};
}

message HelloRequest {
  string firstName = 1;
  string lastName = 2;
  repeated string strings = 3;
  map<string, int32> map = 4;
}

message HelloResponse {
  string greeting = 1;
  google.protobuf.Timestamp createdDate = 2;
}